# SOES-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/LAN9252_stm32f4/: Cargo.toml  Embed.toml  test.c
examples/LAN9252_stm32f4/.cargo/: config.toml
src/: bindings.rs  esc_driver.rs  lib.rs  soes.rs
src/drivers/: esc_c.rs  lan9252_cst.rs  lan9252_embassy.rs  lan9552.rs  mod.rs
src/soes-c/: cc.h  esc.c  esc.h  esc_coe.c  esc_foe.c
tests/: test_ffi.rs
