[package]
name = "SOES-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cty = "0.2"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-stm32 = "0.4.0"
embassy-time = "0.5.0"
embedded-hal = "1.0.0"

[features]
default = [] # => no_std par défaut
std = []     # => active std (tests, desktop)

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.35"
